// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot when has a category 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="css-qq01sn-Button__root"
>
  Some content
</button>
`;

exports[`Button matches snapshot when has a leading component 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.css-r3psvc-Button__leading {
  margin-right: 8px;
  height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-z8uzdf-Icon__root {
  color: inherit;
}

<button
  className="css-qq01sn-Button__root"
>
  <div
    className="css-r3psvc-Button__leading"
  >
    <i
      className="css-z8uzdf-Icon__root Drycon Drycon-check"
    />
  </div>
  Some content
</button>
`;

exports[`Button matches snapshot when has a tier 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="css-qq01sn-Button__root"
>
  Some content
</button>
`;

exports[`Button matches snapshot when has a trailing component 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

.css-1qvurjj-Button__trailing {
  margin-left: 8px;
  height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-z8uzdf-Icon__root {
  color: inherit;
}

<button
  className="css-qq01sn-Button__root"
>
  Some content
  <div
    className="css-1qvurjj-Button__trailing"
  >
    <i
      className="css-z8uzdf-Icon__root Drycon Drycon-check"
    />
  </div>
</button>
`;

exports[`Button matches snapshot when is basic 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="css-qq01sn-Button__root"
>
  Some content
</button>
`;

exports[`Button matches snapshot when is small 1`] = `
.css-qq01sn-Button__root {
  background: #eaeff4;
  color: #172b4e;
  border-radius: 5px;
  padding: calc(8px * 1.5) 24px;
  outline: 0;
  border: 0;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-qq01sn-Button__root:hover {
  cursor: pointer;
  background: #d3dce6;
}

.css-qq01sn-Button__root:active {
  box-shadow: 0 1px 6px #879ba6 inset;
}

.css-qq01sn-Button__root:disabled {
  cursor: not-allowed;
  background: #eaeff4;
  color: rgba(135,155,166,0.5);
  box-shadow: none;
}

<button
  className="css-qq01sn-Button__root"
>
  Some content
</button>
`;
